making main branch

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <div class="cta2">
     <div class="cta2-info">
       <h3>Make a lasting impression</h3>
-      <button>Find a person</button>
+      <button>Find a person today</button>
     </div>
     <img src="" alt="">
   </div>
