inter font addeded

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
   <div class="banner">
       <div class="intro">
-      <h2>Make someone's day.</h2>
-      <h2>With help from a famous face</h2>
+      <h2>Make someone's day. With help from a famous face</h2>
       <h6>Suprise your friend, family or colleague with a personal message from their favourite Footballer, Comidean, Muscian or whoever they’re into!</h6>
       <button>Find a person</button>
       </div>
