added bootstrap and banner image

--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="banner">
-      <div class="intro">
-      <h2>Make someone's day. With help from a famous face</h2>
-      <h6>Suprise your friend, family or colleague with a personal message from their favourite Footballer, Comidean, Muscian or whoever they’re into!</h6>
-      <button>Find a person</button>
+    <div class="banner">
+  <div class="row">
+      <div class="col-lg-6">
+        <div class="intro" >
+        <div id="rectangle"></div>
+        <h2>Make someone's day. With help from a famous face</h2>
+        <h6>Suprise your friend, family or colleague with a personal message from their favourite Footballer, Comidean, Muscian or whoever they’re into!</h6>
+        <button class="banner-btn">Find a person</button>
+        </div>
       </div>
-    <div class="container">
-      <img src="" alt="">
+      <div class="d-none d-lg-block col-lg-6">
+      <div class="container">
+        <img src="assets/hello.png" alt="hello" id="hello">
+      </div>
+      </div>
     </div>
   </div>
   <div class="steps">
